1. 升级版本号 2. insert, update, delete 合并处理